--- a/app/src/main/res/layout/pref_activity.xml
+++ b/app/src/main/res/layout/pref_activity.xml
@@ -100,4 +100,13 @@
         android:layout_marginTop="32dp"
         android:text="Next" />
 
+    <Button
+        android:id="@+id/btnFav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnNext"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        android:text="Go to favorites" />
+
 </RelativeLayout>
