--- a/app/src/main/res/layout/fav_activity.xml
+++ b/app/src/main/res/layout/fav_activity.xml
@@ -2,20 +2,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pinkfade"
     android:orientation="vertical">
 
     <ScrollView
+        android:layout_marginTop="32dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent">
 
         <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:background="@android:color/transparent" />
 
     </ScrollView>
-
 
 </LinearLayout>
